--- a/rutinadeldiacliente/src/styles/views/CrearRutina.scss
+++ b/rutinadeldiacliente/src/styles/views/CrearRutina.scss
@@ -90,16 +90,40 @@
     }
   }
 
+  .action-buttons {
+  display: flex;
+  gap: 1rem;
+  margin-top: 1.5rem;
+
   .crear-paso-btn {
-    background-color: #2E7D32;
+    flex: 1;
+    background-color: #43A047; // verde
     color: white;
-    font-weight: bold;
-    padding: 0.7rem;
-    border-radius: 6px;
     border: none;
+    padding: 0.8rem 1rem;
+    border-radius: 8px;
+    font-weight: bold;
     cursor: pointer;
-    font-size: 1.1rem;
-    align-self: flex-end;
-    width: 200px;
+
+    &:hover {
+      background-color: #66BB6A;
+    }
   }
+
+  .volver-btn {
+    flex: 1;
+    background-color: #FBC02D; // amarillo
+    color: white;
+    border: none;
+    padding: 0.8rem 1rem;
+    border-radius: 8px;
+    font-weight: bold;
+    cursor: pointer;
+
+    &:hover {
+      background-color: #FFD54F;
+    }
+  }
+}
+
 }
