--- a/rutinadeldiacliente/src/styles/views/InicioAdulto.scss
+++ b/rutinadeldiacliente/src/styles/views/InicioAdulto.scss
@@ -13,21 +13,25 @@
 
     .header-content {
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
       align-items: center;
+      text-align: center;
+      position: relative;
       margin-bottom: 1rem;
 
       .header-title {
         font-family: 'Comic Sans MS', cursive, sans-serif;
         font-weight: bold;
         color: variables.$text-color;
-        flex-grow: 1;
+        flex-grow: 0;
         text-align: center;
       }
 
       .settings-button {
         background-color: rgba(255, 255, 255, 0.2);
         border-radius: 50%;
+        position: absolute;
+        right: 0.5rem;
         
         &:hover {
           background-color: rgba(255, 255, 255, 0.3);
