--- a/rutinadeldiacliente/src/styles/views/AjustesInfante.scss
+++ b/rutinadeldiacliente/src/styles/views/AjustesInfante.scss
@@ -1,6 +1,7 @@
 @use "sass:color";
 @use '../variables';
 @use '../mixins';
+@use '../components/MainActionButton';
 
 .ajustes-infante {
   min-height: 100vh;
@@ -17,33 +18,11 @@
     margin-bottom: variables.$spacing-xl;
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: variables.$spacing-lg;
     
     .ajuste-button {
-      @include mixins.button-base;
-      font-size: variables.$font-size-xl;
-      padding: variables.$spacing-xl;
-      border-radius: variables.$border-radius-lg;
-      min-height: 80px;
-      font-weight: 700;
-      
-      &.adulto-button {
-        background-color: variables.$secondary-color;
-        color: variables.$white;
-        
-        &:hover {
-          background-color: color.adjust(variables.$secondary-color, $lightness: -10%);
-        }
-      }
-      
-      &.logros-button {
-        background-color: variables.$secondary-color;
-        color: variables.$white;
-        
-        &:hover {
-          background-color: color.adjust(variables.$secondary-color, $lightness: -10%);
-        }
-      }
+      @extend .main-action-button;
     }
   }
   
@@ -60,12 +39,13 @@
   }
   
   .back-section {
+    display: flex;
+    justify-content: center;
+    margin-top: variables.$spacing-lg;
+
     .back-button {
-      @include mixins.button-danger;
-      font-size: variables.$font-size-lg;
-      padding: variables.$spacing-md variables.$spacing-lg;
-      border-radius: variables.$border-radius-lg;
-      min-width: 150px;
+      @extend .volver-button;
+      max-width: 150px;
     }
   }
 }
