--- a/rutinadeldiacliente/src/styles/components/NavBar.scss
+++ b/rutinadeldiacliente/src/styles/components/NavBar.scss
@@ -18,6 +18,10 @@
     align-items: center;
     gap: variables.$spacing-sm;
     justify-content: flex-start;
+
+    .back-button {
+      margin-left: -0.5rem; 
+    }
   }
 
   .navbar-center {
@@ -38,6 +42,7 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    gap: 0.3rem; 
   }
 
   .navbar-button {
