--- a/rutinadeldiacliente/src/styles/variables.scss
+++ b/rutinadeldiacliente/src/styles/variables.scss
@@ -27,7 +27,7 @@ $border-radius-lg: 1.5rem;
 $border-radius-xl: 2rem;
 
 // Fuentes
-$font-family-primary: 'Inter', sans-serif;
+$font-family-primary: 'Comic Sans MS', 'Comic Sans', sans-serif;
 $font-size-sm: 0.875rem;
 $font-size-md: 1rem;
 $font-size-lg: 1.25rem;
