style: agregar estilos definitivos InicioInfante

--- a/rutinadeldiacliente/src/styles/components/MainActionButton.scss
+++ b/rutinadeldiacliente/src/styles/components/MainActionButton.scss
@@ -15,6 +15,7 @@
   max-width: 350px;
   margin: 0 auto !important;
   display: block;
+  margin-bottom: 0.9rem !important;
 
   &:hover {
     background-color: #6aa966 !important;
