--- a/rutinadeldiacliente/src/styles/components/NavBar.scss
+++ b/rutinadeldiacliente/src/styles/components/NavBar.scss
@@ -5,6 +5,7 @@
   background-color: variables.$accent-color;
   padding: variables.$spacing-md variables.$spacing-lg;
   box-shadow: variables.$shadow-sm;
+  margin-bottom: 2.2rem !important;
 
   .navbar-content {
     display: grid;
