--- a/rutinadeldiacliente/src/styles/components/NavBarAdulto.scss
+++ b/rutinadeldiacliente/src/styles/components/NavBarAdulto.scss
@@ -20,12 +20,12 @@
     align-items: center;
 
     .back-button {
-      margin-left: -2rem; 
       color: #2C3E50;
     }
 
     .header-title {
       font-size: variables.$font-size-xxl;
+      margin-right: 2rem;
       font-weight: 700;
       color: #2C3E50;
       text-align: center;
