--- a/rutinadeldiacliente/src/styles/views/AjustesInfante.scss
+++ b/rutinadeldiacliente/src/styles/views/AjustesInfante.scss
@@ -12,6 +12,7 @@
     max-width: 600px;
     margin: 0 auto;
     text-align: center;
+    padding-top: 0.4rem !important;
   }
   
   .ajustes-options {
@@ -27,6 +28,7 @@
   }
   
   .help-section {
+    margin-top: 5.5rem;
     .help-button {
       @include mixins.button-help;
       font-size: variables.$font-size-lg;
