--- a/rutinadeldiacliente/src/styles/views/EditarRutina.scss
+++ b/rutinadeldiacliente/src/styles/views/EditarRutina.scss
@@ -97,10 +97,10 @@
           cursor: pointer;
           background-color: transparent;
           color: #000000; 
-          transition: background-color 0.2s ease;
+          transition: transform 0.2s ease;
 
           &:hover {
-            background-color: rgba(0, 0, 0, 0.1);
+            transform: scale(1.2); 
           }
 
           svg {
