--- a/rutinadeldiacliente/src/styles/views/RecordatorioAdulto.scss
+++ b/rutinadeldiacliente/src/styles/views/RecordatorioAdulto.scss
@@ -167,8 +167,9 @@
     background-color: #E53935;
     color: #000000 !important;
     border: 1px solid #000000 !important;
-    padding: 0.8rem 3rem 0.8rem 1rem;
+    padding: 0.8rem 3rem 0.8rem 0.5rem;
     border-radius: 8px;
+    width: 100%; 
     font-weight: bold;
     cursor: pointer;
     font-size: 1.1rem;
