--- a/rutinadeldiacliente/src/styles/views/InicioAdulto.scss
+++ b/rutinadeldiacliente/src/styles/views/InicioAdulto.scss
@@ -28,7 +28,7 @@
       .settings-button {
         background-color: rgba(255, 255, 255, 0.2);
         border-radius: 50%;
-        
+
         &:hover {
           background-color: rgba(255, 255, 255, 0.3);
         }
@@ -70,6 +70,13 @@
           transform: translateY(-2px);
         }
 
+        &--hidden {
+          opacity: 0.45;
+          filter: grayscale(40%);
+          pointer-events: auto;
+          /* seguir permitiendo acciones como cambiar visibilidad/editar */
+        }
+
         .routine-image {
           width: 100%;
           height: 200px;
@@ -106,7 +113,7 @@
 
               &.notification-button {
                 background-color: rgba(255, 193, 7, 0.8);
-                
+
                 &:hover {
                   background-color: rgba(255, 193, 7, 0.9);
                 }
