--- a/rutinadeldiacliente/src/styles/components/HelpButton.scss
+++ b/rutinadeldiacliente/src/styles/components/HelpButton.scss
@@ -4,16 +4,16 @@
 .help-button {
   background-color: v.$help-color !important;
   color: v.$black !important;
-  border: 1px solid v.$black !important;
+  border: v.$border-width v.$border-style v.$border-color-default !important;
   border-radius: v.$border-radius-full !important;
-  text-transform: none !important;
+  text-transform: v.$text-transform-none !important;
   font-size: v.$font-size-help-button !important;
-  font-weight: 500 !important;
-  padding: 0.75rem 2rem !important;
+  font-weight: v.$font-weight-medium !important;
+  padding: v.$spacing-help-button-y v.$spacing-help-button-x !important;
 
-  display: flex;
-  align-items: center;
-  gap: 0.3rem;
+  display: v.$flex;
+  align-items: v.$center;
+  gap: v.$icon-gap;
 
   svg {
     font-size: v.$font-size-xxl;
