--- a/rutinadeldiacliente/src/styles/views/RutinaDetalle.scss
+++ b/rutinadeldiacliente/src/styles/views/RutinaDetalle.scss
@@ -106,6 +106,12 @@
       justify-content: center;
     }
 
+    button:disabled {
+      opacity: 0.4;   
+      cursor: not-allowed;
+      transform: none; 
+    }
+
     .naranja {
       background-color: #FBC02D !important;
       color: #000 !important;
